--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -57,7 +57,7 @@ jobs:
       - uses: mr-smithers-excellent/docker-build-push@v6
         name: Build & Push Docker image
         with:
-          image: ghcr.io/josemrs/revolut-hometask
+          image: revolut-hometask
           tags: v1, latest
           registry: ghcr.io
           username: josemrs
