--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,7 +16,10 @@ services:
     build: .
     command: uvicorn api:api --host 0.0.0.0 --port 8000
     environment:
-      DATABASE_URL: "postgresql://test:test@db:5432/hello"
+      DATABASE_HOST: "db"
+      DATABASE_USER: "test"
+      DATABASE_PASS: "test"
+      DATABASE_PORT: "5432"
     volumes:
       - .:/src/api
     ports:
