--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -28,6 +28,15 @@ jobs:
       - name: Black
         run: python -m black --diff --check src
 
+  Helm-Checks:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@master
+    - name: helm-check
+      uses: igabaydulin/helm-check-action@0.1.4
+      env:
+        CHART_LOCATION: ./charts
+
   Build-Docker:
     runs-on: ubuntu-latest
     if: github.ref != 'refs/heads/main'
@@ -63,28 +72,30 @@ jobs:
           username: josemrs
           password: ${{secrets.GITHUB_TOKEN}}
           pushImage: true
-  
-  Release-Chart:
-    permissions:
-      contents: write
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
 
-      - name: Configure Git
-        run: |
-          git config user.name "$GITHUB_ACTOR"
-          git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
 
-      - name: Install Helm
-        uses: azure/setup-helm@v4
-        env:
-          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-
-      - name: Run chart-releaser
-        uses: helm/chart-releaser-action@v1.6.0
-        env:
-          CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+# Disabled for privacy
+#  Release-Chart:
+#    permissions:
+#      contents: write
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Checkout
+#        uses: actions/checkout@v4
+#        with:
+#          fetch-depth: 0
+#
+#      - name: Configure Git
+#        run: |
+#          git config user.name "$GITHUB_ACTOR"
+#          git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
+#
+#      - name: Install Helm
+#        uses: azure/setup-helm@v4
+#        env:
+#          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+#
+#      - name: Run chart-releaser
+#        uses: helm/chart-releaser-action@v1.6.0
+#        env:
+#          CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
