--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -35,7 +35,7 @@ jobs:
     - name: helm-check
       uses: igabaydulin/helm-check-action@0.1.4
       env:
-        CHART_LOCATION: ./charts
+        CHART_LOCATION: ./charts/hometask
 
   Build-Docker:
     runs-on: ubuntu-latest
