--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -79,6 +79,7 @@ jobs:
 #    permissions:
 #      contents: write
 #    runs-on: ubuntu-latest
+#    needs: Helm-Checks
 #    steps:
 #      - name: Checkout
 #        uses: actions/checkout@v4
