--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -18,6 +18,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install pylint pytest black
           pip install -r requirements.txt
+          pip install -r requirements_test.txt
 
       - name: Test
         run: python -m pytest tests/test_unit.py
